<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fram_gone">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/title"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_sub_tile"
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:paddingBottom="15dp"
            android:text="@string/message"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_no"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:text="@string/no"
                android:padding="10dp"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>