<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/land"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:elevation="1dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ahir_english_lan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:elevation="1dp"
                    android:drawableLeft="@drawable/ic_arrow"
                    android:background="@drawable/btn_color_circle"
                    android:layout_gravity="center"
                    android:text="@string/e" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:elevation="1dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ahir_hindi_lan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:elevation="1dp"
                    android:drawableLeft="@drawable/ic_arrow"
                    android:background="@drawable/btn_color_circle"
                    android:layout_gravity="center"
                    android:text="@string/h" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:elevation="1dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ahir_gujrati_lan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:elevation="1dp"
                    android:drawableLeft="@drawable/ic_arrow"
                    android:background="@drawable/btn_color_circle"
                    android:layout_gravity="center"
                    android:text="@string/g" />
            </LinearLayout>






        </LinearLayout>







    </LinearLayout>


</LinearLayout>