<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_titel"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/a2"
                    android:textStyle="bold"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_iconfinder_ic_wifi_tethering_48px_352227" />


                    <TextView
                        android:id="@+id/v1"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/a1"
                        android:layout_height="match_parent" />

                </LinearLayout>







                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">



                    <TextView
                        android:id="@+id/tv_ok"
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:text="@string/yes"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.7"
                        android:textStyle="bold"
                        android:layout_height="match_parent" />
                </LinearLayout>




            </LinearLayout>

        </ScrollView>







    </FrameLayout>


</RelativeLayout>