<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="5dp"
    android:background="@drawable/shape_pop1"
    android:elevation="6dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:background="@drawable/shape_pop"
        android:orientation="vertical">

        <!--<LinearLayout
            android:id="@+id/tv_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_set" />


            <TextView
                style="@style/txt_white_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.8"
                android:singleLine="false"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:text="@string/s" />




        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/tv_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_iconfinder_outline_bussiness_and_media_21_4041212" />


            <TextView
                style="@style/txt_white_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.8"
                android:singleLine="false"
                android:text="@string/l"
                android:textColor="@color/black" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_iconfinder_share_853347" />


            <TextView
                style="@style/txt_white_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.8"

                android:singleLine="false"
                android:text="@string/m"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_iconfinder_star_172558" />


            <TextView
                style="@style/txt_white_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.8"
                android:singleLine="false"
                android:text="@string/r"
                android:textColor="@color/black" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>